[package]
name = "master-of-destiny"
version = "0.1.6"
repository = "https://github.com/christopherdumas/Skyspace"
description = "A sci-fi citybuilding survival roguelike-like. Graphics and UI/UX design by William Trovinger, gameplay and system design and programming by Christopher Dumas."
homepage = "christopherdumas.github.io/Skyspace"
authors = ["Christopher Dumas <christopherdumas@gmail.com>",
"William Trovinger <william.trovinger@icloud.com"]
build = "build.rs"

[dependencies]
pipeline = "0.5.0"
tcod = "0.12"
bichannels = {path = "lib/bichannels"} 
tcod-sys = "*"
rand = "0.3.12"